# ahsoka

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  conftest.py  pyproject.toml
.claude/: PRINCIPAL.md  settings.json
.claude/agents/: cara-dune.md  ig-11.md  kuiil.md  the-armorer.md
.github/workflows/: deploy.yml  diagnose.yml
ahsoka/: config.py  database.py  main.py  models.py
ahsoka/bot/: commands.py  log_handler.py  notifier.py
ahsoka/pipeline/: batch_queue.py  batch_submitter.py  dedup.py  keyword_filter.py  keyword_index.py  scorer.py  scraper.py  tg_resolver.py  user_filter.py
ahsoka/watcher/: client.py  handler.py  poller.py
tests/: test_batch_queue.py  test_batch_submitter.py  test_commands.py  test_database.py  test_dedup.py  test_keyword_filter.py  test_keyword_index.py  test_log_handler.py  test_main.py  test_models.py  test_notifier.py  test_scorer.py  test_scraper.py  test_tg_resolver.py  test_user_filter.py  test_watcher.py
