[project]
name = "ahsoka"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pyrogram",
    "tgcrypto",
    "aiogram>=3",
    "httpx",
    "trafilatura",
    "anthropic>=0.40.0",
    "aiosqlite",
    "pydantic-settings",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
